frontend2/reports/tests/Report.txt

> frontend2@0.1.0 test:coverage
> npm run test:ci --coverage


> frontend2@0.1.0 test:ci
> cross-env CI=true react-scripts test

FAIL src/App.test.js
  × renders learn react link (25 ms)

  ● renders learn react link

    TypeError: _react2.screen.getElementById is not a function

       5 | test('renders learn react link', () => {
       6 |   render(<App />);
    >  7 |   const linkElement = screen.getElementById('root')
         |                              ^
       8 |   expect(linkElement).toBeInTheDocument();
       9 | });
      10 |

      at Object.<anonymous> (src/App.test.js:7:30)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        1.291 s
Ran all test suites.
